End of section 6

--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,26 +1,28 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="#">Dating app</a>
-
-        <!--Conditionals in angular-->
-        <!-- boolean values in angular are false by default-->
-        <!--Using *ngIf div DOES NOT EXIST unitl condition is met-->
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Matches</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Lists</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Messages</a>
-          </li>
-        </ul>
+        <a class="navbar-brand" routerLink='/'>Dating app</a>
+        <!--NG-container does not generate HTML-->
+        <ng-container  *ngIf="accountService.currentUser$ | async">
+          <!--Conditionals in angular-->
+          <!-- boolean values in angular are false by default-->
+          <!--Using *ngIf div DOES NOT EXIST unitl condition is met-->
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
+            </li>
+          </ul>
+        </ng-container>
 
         <!--To use ngx-bootstrap dropdowns we need to use proper directives-->
         <!--*dropdownMenu - structural directive-->
-        <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
-          <a  class="dropdown-toggle text-light" dropdownToggle>Welcomne user</a>
+        <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+          <a  class="dropdown-toggle text-light" dropdownToggle>Welcomne {{user.username | titlecase}}</a>
           <div class="dropdown-menu mt-3"*dropdownMenu>
             <a class="dropdown-item">Edit profile</a>
             <div class="dropdown-divider"></div>
@@ -51,7 +53,7 @@
             class="form-control me-2" 
             type="password" 
             placeholder="Password">
-          <button class="btn btn-outline-success" type="submit">Login</button>
+          <button class="btn btn-success" type="submit">Login</button>
         </form>
 
       </div>
